--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
   <!-- Bannière -->
   <div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,0,0,0.4) 0%, rgba(0,0,0,0.4) 50%), url('images/banner.jpg');">
     <div class="banner-content">
-      <h1>Le titre du projet</h1>
-      <p>La phrase d'accroche</p>
-      <img src="images/logo.png" alt="logo" class="logo-big">
+      <h1>Faucon Check</h1>
+      <p>La site qui check tous les médias</p>
+      <img src="images/Logo.png" alt="logo" class="logo-big">
     </div>
   </div>
 
@@ -44,7 +44,7 @@
     <div class="container">
       <h3>Le concept</h3>
       <i class="fas fa-rocket mb-5"></i>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem id fugit adipisci eos quidem laudantium quos et magni nostrum excepturi cupiditate vel minus fugiat, sequi tempora quam, voluptatem consectetur reprehenderit!</p>
+      <p>Répertoire en ligne des sources d'informations pour professionnel.</p>
       <div class="row">
         <div class="col-lg-4">
           <div class="frame">
@@ -52,7 +52,7 @@
               Le public concerné
             </h4>
             <i class="fas fa-users mb-3"></i>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam vero sequi, voluptas veritatis, earum rem nesciunt atque deleniti esse quaerat .</p>
+            <p>Pour les curieux et journalistes professionnels</p>
           </div>
         </div>
         <div class="col-lg-4">
@@ -61,7 +61,7 @@
               La problématique
             </h4>
             <i class="far fa-question-circle mb-3"></i>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus amet laboriosam delectus odit accusantium id ab illo facere. Quibusdam iure praesentium fuga illo voluptate est. Doloremque possimus sint quidem id.</p>
+            <p>Sur quel site se rendre pour trouver une infos de qualité, sérieuse et personnalisée?</p>
           </div>
         </div>
         <div class="col-lg-4">
@@ -70,7 +70,7 @@
               La solution
             </h4>
             <i class="far fa-lightbulb mb-3"></i>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga reiciendis dolorum quis quae vitae repellendus dolorem at perferendis possimus earum dolore recusandae, similique a praesentium magni! Minima sunt fuga amet.</p>
+            <p>Répertorier les sites d'informations par thèmes en fonction de leur note attribuée par les utilisateurs.</p>
           </div>
         </div>
       </div>
@@ -86,11 +86,11 @@
     <div class="container">
       <h3>Le prototype</h3>
       <i class="fas fa-cogs mb-5"></i>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem id fugit adipisci eos quidem laudantium quos et magni nostrum excepturi cupiditate vel minus fugiat, sequi tempora quam, voluptatem consectetur reprehenderit!</p>
+      <p>Petite mise en bouche de la QDB prod, pour rendre la rechertche d'information plus pratique et plus intuitive.</p>
 
       <!-- ########## -->
       <!-- Récupérer cette ligne de code sur Figma: https://www.figma.com/ -->
-      <iframe style="border: none;" width="600" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FKDiAjenZMX9E13POgPsYTzBV%2Fkedge-2019-4%3Fnode-id%3D0%253A1%26scaling%3Dscale-down" allowfullscreen></iframe>
+      <iframe style="border: none;" width="600" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FDRH8sYikt8ptMn58K38daRbv%2FUntitled%3Fnode-id%3D0%253A1%26scaling%3Dscale-down" allowfullscreen></iframe>
       <!-- ########## -->
 
     </div>
@@ -105,15 +105,15 @@
     <div class="container">
       <h3>L'équipe</h3>
       <i class="fas fa-users mb-5"></i>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem id fugit adipisci eos quidem laudantium quos et magni nostrum excepturi cupiditate vel minus fugiat, sequi tempora quam, voluptatem consectetur reprehenderit!</p>
+      <p>La QDB lance "FAUCON CHECK" premier site de recherche d'information.</p>
       <div class="row">
 
 
         <div class="col-lg-3">
           <div class="card">
-            <img src="images/team1.jpg" class="card-img-top" alt="name1">
+            <img src="images/ben.jpg" class="card-img-top" alt="name1">
             <div class="card-body">
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <p class="card-text">Benjamin Sarfati. 20 ans motivé et visionnaire</p>
             </div>
           </div>
         </div>
@@ -121,9 +121,9 @@
 
         <div class="col-lg-3">
           <div class="card">
-            <img src="images/team2.jpg" class="card-img-top" alt="name2">
+            <img src="images/aya.jpg" class="card-img-top" alt="name2">
             <div class="card-body">
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <p class="card-text">Ayayi Kpodar. 20 ans perséverant et appliqué</p>
             </div>
           </div>
         </div>
@@ -131,9 +131,9 @@
 
         <div class="col-lg-3">
           <div class="card">
-            <img src="images/team3.jpg" class="card-img-top" alt="name3">
+            <img src="images/leo.PNG" class="card-img-top" alt="name3">
             <div class="card-body">
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <p class="card-text">Léo Macia. 19 ans réfléchi et à l'écoute </p>
             </div>
           </div>
         </div>
@@ -142,9 +142,9 @@
         <!-- Supprimer( ou copier-coller) ces lignes code pour supprimer (ou ajouter) un membre à la team -->
         <div class="col-lg-3">
           <div class="card">
-            <img src="images/team4.jpg" class="card-img-top" alt="name4">
+            <img src="images/shaw.jpg" class="card-img-top" alt="name4">
             <div class="card-body">
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <p class="card-text">Léo Shawky. 19 ans Observateur et ingénieux</p>
             </div>
           </div>
         </div>
@@ -172,4 +172,6 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 </html>
+
+
 
