--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,0,0,0.4) 0%, rgba(0,0,0,0.4) 50%), url('images/banner.jpg');">
     <div class="banner-content">
       <h1>Faucon Check</h1>
-      <p>La site qui check tous les médias</p>
+      <p>La site qui check tous les médias !</p>
       <img src="images/Logo.png" alt="logo" class="logo-big">
     </div>
   </div>
