--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
               La problématique
             </h4>
             <i class="far fa-question-circle mb-3"></i>
-            <p>Sur quel site se rendre pour trouver une infos de qualité, sérieuse et personnalisée?</p>
+            <p>Sur quels sites se rendre pour trouver une infos de qualité, sérieuse et personnalisée?</p>
           </div>
         </div>
         <div class="col-lg-4">
