--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <!-- Navbar -->
   <div class="navbar">
     <a href="#">
-      <img src="images/logo.png" alt="logo" class="logo">
+      <img src="images/Logo.png" alt="logo" class="logo">
     </a>
     <div class="d-flex justify-content-center">
       <a href="#concept" class="item">Le concept</a>
