--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     <div class="container">
       <h3>L'équipe</h3>
       <i class="fas fa-users mb-5"></i>
-      <p>La QDB lance "FAUCON CHECK" premier site de recherche d'information.</p>
+      <p>La QDB lance "FAUCON CHECK" le premier site de recherche d'information.</p>
       <div class="row">
 
 
