--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <!-- Navbar -->
   <div class="navbar">
     <a href="#">
-      <img src="images/Logo.png" alt="logo" class="logo">
+      <img src="images/logo.png" alt="logo" class="logo">
     </a>
     <div class="d-flex justify-content-center">
       <a href="#concept" class="item">Le concept</a>
@@ -61,7 +61,7 @@
               La problématique
             </h4>
             <i class="far fa-question-circle mb-3"></i>
-            <p>Sur quels sites se rendre pour trouver une infos de qualité, sérieuse et personnalisée?</p>
+            <p>Sur quel site se rendre pour trouver une infos de qualité, sérieuse et personnalisée?</p>
           </div>
         </div>
         <div class="col-lg-4">
@@ -105,7 +105,7 @@
     <div class="container">
       <h3>L'équipe</h3>
       <i class="fas fa-users mb-5"></i>
-      <p>La QDB lance "FAUCON CHECK" le premier site de recherche d'information.</p>
+      <p>La QDB lance "FAUCON CHECK" premier site de recherche d'information.</p>
       <div class="row">
 
 
