--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="banner-content">
       <h1>Faucon Check</h1>
       <p>La site qui check tous les médias</p>
-      <img src="images/Logo.png" alt="logo" class="logo-big">
+      <img src="images/logo.png" alt="logo" class="logo-big">
     </div>
   </div>
 
