--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         <!-- Supprimer( ou copier-coller) ces lignes code pour supprimer (ou ajouter) un membre à la team -->
         <div class="col-lg-3">
           <div class="card">
-            <img src="images/shaw.jpg" class="card-img-top" alt="name4">
+            <img src="images/shaw.JPG" class="card-img-top" alt="name4">
             <div class="card-body">
               <p class="card-text">Léo Shawky. 19 ans Observateur et ingénieux</p>
             </div>
