--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
   <div class="wrapper" id="team">
     <div class="wrapper-circle right">
-      <img src="images/code.jpg" class="circle right" alt="code">
+      <img src="images/data.jpg" class="circle right" alt="code">
     </div>
     <div class="container">
       <h3>L'équipe</h3>
